--- a/Home.html
+++ b/Home.html
@@ -400,9 +400,9 @@
           <button class="tratamento pe-none">TRATAMENTO PARA
             12 MESES</button>
           <img src="img/12potes-min.png" class="imgfrascobuy img-fluid" alt="...">
-          <h5 class="card-title h5_preco">12x<br>R$69,98</h5>
+          <h5 class="card-title h5_preco">12x</h5><h5 class="card-title h5_preco_2">R$37,90</h5>
           <p class="card-text p_desconto">Preço com desconto: R$697,00</p>
-          <img src="img/correios-logo-5.png" alt="correios">
+          <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
           <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
           </button></a>
@@ -415,9 +415,9 @@
           <button class="tratamento pe-none">TRATAMENTO PARA
             5 MESES</button>
           <img src="img/3-min-compress.png" class="imgfrascobuy2 img-fluid" alt="...">
-          <h5 class="card-title h5_preco">12x<br>R$69,98</h5>
-          <p class="card-text p_desconto">Preço com desconto: R$697,00</p>
-          <img src="img/correios-logo-5.png" alt="correios">
+          <h5 class="card-title h5_preco">12x</h5><h5 class="card-title h5_preco_2">R$37,90</h5>
+          <p class="card-text p_desconto">Preço com desconto: R$397,00</p>
+          <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
           <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
           </button></a>
@@ -431,9 +431,9 @@
           <button class="tratamento pe-none">TRATAMENTO PARA
             3 MESES</button>
           <img src="img/3-min-compress.png" class="imgfrascobuy2 img-fluid" alt="...">
-          <h5 class="card-title h5_preco">12x<br>R$69,98</h5>
-          <p class="card-text p_desconto">Preço com desconto: R$697,00</p>
-          <img src="img/correios-logo-5.png" alt="correios">
+          <h5 class="card-title h5_preco">12x</h5><h5 class="card-title h5_preco_2">R$27,90</h5>
+          <p class="card-text p_desconto">Preço com desconto: R$297,00</p>
+          <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
           <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
           </button></a>
@@ -446,9 +446,9 @@
           <button class="tratamento pe-none">TRATAMENTO PARA
             1 MESES</button>
           <img src="img/1-min-compresss.png" class="imgfrascobuy2 img-fluid" alt="...">
-          <h5 class="card-title h5_preco">12x<br>R$69,98</h5>
-          <p class="card-text p_desconto">Preço com desconto: R$697,00</p>
-          <img src="img/correios-logo-5.png" alt="correios">
+          <h5 class="card-title h5_preco">12x</h5><h5 class="card-title h5_preco_2">R$19,90</h5>
+          <p class="card-text p_desconto">Preço com desconto: R$197,00</p>
+          <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
           <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
           </button></a>
