--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,20 @@
 <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script>
+        //Back Intent
+        ! function () {
+            var t;
+            try {
+                for (t = 0; 10 > t; ++t) history.pushState({}, "", "#");
+                onpopstate = function (t) {
+                    t.state && location.replace("Backpage") 
+                    /***TROCAR O TEXTO "LINK-PARA-REDIRECIONAMENTO" *////
+                }
+            } catch (o) {}
+        }();
+    </script>
   </head>
   <body>
     
@@ -92,7 +106,7 @@
             </div>
         </div>
         <div class="col-md-7 col-12 align-self-center">
-          <img src="img/img_frasco_na_pedra.png" alt="imgcurcumyalivio" class="imgalivio img-fluid">
+          <img src="img/img_frasco_na_pedra.png" alt="imgcurcumyalivio" class="imgalivio img-fluid" title="Frasco do Curcumy em uma Pedra">
         </div>
    </section>
 
@@ -189,7 +203,6 @@
 
 
        <!--DEPOIMENTOS --->
-       
        <section> 
         <div class="carddepoimentocolor">
         <div class="backgroudmarron">
@@ -201,10 +214,10 @@
                 <h2 class="fontimg_depo">Janet, 59 anos</h2>
                 <h2 style="color: yellow;">★ ★ ★ ★ ★</h2>
                 <p class="pimg_depo">
-                  Curcumy é maravilhoso, gostei muito<br> senti o efeito nos primeiros dias de uso.<br> 
-                  Minhas mãos há mais de 10 ano<br> inchava e doia muito por
-                  conta da artrite,<br> não sabia mais o que fazer, hoje não<br> incha nem dói
-                  mais graças ao Curcumy<br> voltou ao normal, pra mim é 5 estrelas.
+                  Curcumy é maravilhoso, gostei muito senti o efeito nos primeiros dias de uso.
+                  Minhas mãos há mais de 10 ano inchava e doia muito por
+                  conta da artrite, não sabia mais o que fazer, hoje não incha nem dói
+                  mais graças ao Curcumyvoltou ao normal, pra mim é 5 estrelas.
                 </p>
               </div>
               <div class="col gridimgdepo">
@@ -212,10 +225,10 @@
                 <h2 class="fontimg_depo">Cícero, 45 anos</h2>
                 <h2 style="color: yellow;">★ ★ ★ ★ ★</h2>
                 <p class="pimg_depo">
-                  Curcumy é maravilhoso, gostei muito<br> senti o efeito nos primeiros dias de uso.<br> 
-                  Minhas mãos há mais de 10 ano<br> inchava e doia muito por
-                  conta da artrite,<br> não sabia mais o que fazer, hoje não<br> incha nem dói
-                  mais graças ao Curcumy<br> voltou ao normal, pra mim é 5 estrelas.
+                  Curcumy é maravilhoso, gostei muito senti o efeito nos primeiros dias de uso.
+                  Minhas mãos há mais de 10 ano inchava e doia muito por
+                  conta da artrite, não sabia mais o que fazer, hoje não> incha nem dói
+                  mais graças ao Curcumy voltou ao normal, pra mim é 5 estrelas.
                 </p>
               </div>
               <div class="col gridimgdepo">
@@ -223,10 +236,10 @@
                 <h2 class="fontimg_depo">Tereza, 45 anos</h2>
                 <h2 style="color: yellow;">★ ★ ★ ★ ★</h2>
                 <p class="pimg_depo">
-                  Curcumy é maravilhoso, gostei muito<br> senti o efeito nos primeiros dias de uso.<br> 
-                  Minhas mãos há mais de 10 ano<br> inchava e doia muito por
-                  conta da artrite,<br> não sabia mais o que fazer, hoje não<br> incha nem dói
-                  mais graças ao Curcumy<br> voltou ao normal, pra mim é 5 estrelas.
+                  Curcumy é maravilhoso, gostei muito senti o efeito nos primeiros dias de uso.
+                  Minhas mãos há mais de 10 anoinchava e doia muito por
+                  conta da artrite, não sabia mais o que fazer, hoje não incha nem dói
+                  mais graças ao Curcumy voltou ao normal, pra mim é 5 estrelas.
                 </p>
               </div>
             </div>
@@ -363,7 +376,7 @@
 <section class="slider5_garantia">  
   <div class="container align-self-center">
     <div class="row">
-      <div class="col-sm-6 align-self-center mb-md-0 mb-4 order-md-2 col-10">
+      <div class="col-sm-6 align-self-center mb-md-0 mb-4 order-md-2 col-12">
         <h2 class="h2_garantia ">GARANTIA DE RESULTADOS OU SEU DINHEIRO DE VOLTA!</h2>
         <p class="p_garantia">        
         Sabemos que oferecemos produtos eficazes e 
@@ -404,7 +417,7 @@
           <p class="card-text p_desconto">Preço com desconto: R$697,00</p>
           <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
-          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
+          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"><img src="img/buy-svgrepo-com.svg"> COMPRAR AGORA
           </button></a>
         </div>
       </div>
@@ -419,7 +432,7 @@
           <p class="card-text p_desconto">Preço com desconto: R$397,00</p>
           <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
-          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
+          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"><img src="img/buy-svgrepo-com.svg"> COMPRAR AGORA
           </button></a>
         </div>
       </div>
@@ -435,7 +448,7 @@
           <p class="card-text p_desconto">Preço com desconto: R$297,00</p>
           <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
-          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
+          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"><img src="img/buy-svgrepo-com.svg"> COMPRAR AGORA
           </button></a>
         </div>
       </div>
@@ -450,7 +463,7 @@
           <p class="card-text p_desconto">Preço com desconto: R$197,00</p>
           <img src="img/correios-logo-5.png" alt="correios" class="correios img-fluid">
           <img src="img/155681041950147.png" class="imgfrete img-fluid" alt="..."> 
-          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"> COMPRAR AGORA
+          <button class="button_compra"><a class="text-white" href="https://ev.braip.com/campanhas/cpa/cam5k87lg"><img src="img/buy-svgrepo-com.svg"> COMPRAR AGORA
           </button></a>
         </div>
       </div>
@@ -488,7 +501,7 @@
 <footer class="slider7_perguntas">
   <div class="container text-center">
     <div class="row">
-      <div class="col-9 col-md-12">
+      <div class="col-12 col-md-12">
         <h2 class="h2_perguntas">
           PERGUNTAS FREQUENTES
           </h2>
@@ -584,7 +597,7 @@
     <div class="row">
       <div class="col-8 col-md-3 espaco_pg">
         <h2 class="h2_textfooot">Rastreio</h2>
-        <button class="button_Rastrear"><i class="fa fa-home"></i><a class="text-white" href="https://correiosrastrear.com/"> Rastrear Pedido
+        <button class="button_Rastrear"><img src="img/delivery-truck-svgrepo-com.svg" class="text-white" href="https://correiosrastrear.com/"> Rastrear Pedido
         </button></a>
       </div>
       <div class="col-8 col-md-3 espaco_pg">
@@ -597,7 +610,8 @@
       </div>
       <div class="col-8 col-md-3 espaco_pg">
         <h2 class="h2_textfooot">Atendimento Whatsapp</h2>
-        <button class="button_WhatsApp"><i class=" fa fa-home "><a class="text-white" href="https://api.whatsapp.com/send?phone=5511965799724&text=TEXT%20HTML"></i> Whatsapp
+        <button class="button_WhatsApp ">
+          <img src="img/icons8-whatsapp.svg" class="zap"><a class="text-white " href="https://api.whatsapp.com/send?phone=5511965799724&text=TEXT%20HTML"></i> Whatsapp
         </button></a>
       </div>   
     </div>
